tests/dataset/tpc-ds/compiler/erlang/q4.error
run: exit status 127
escript: exception error: an error occurred when evaluating an arithmetic expression
  in operator  -/2
     called as undefined - undefined
  in call from q4_erl__escript__1752__564338__286743__8962:'-main/1-lc$^17/1-7-'/1 (/tmp/q4.erl, line 11)
  in call from q4_erl__escript__1752__564338__286743__8962:'-main/1-lc$^16/1-6-'/2 (/tmp/q4.erl, line 11)
  in call from q4_erl__escript__1752__564338__286743__8962:main/1 (/tmp/q4.erl, line 11)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
